<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.sothree.slidinguppanel.SlidingUpPanelLayout xmlns:sothree="http://schemas.android.com/apk/res-auto"
        android:id="@+id/sliding_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        sothree:dragView="@+id/media_playing_text"
        sothree:panelHeight="68dp"
        sothree:paralaxOffset="100dp"
        sothree:shadowHeight="4dp"
        sothree:initialState="hidden">

        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:clickable="true"
            android:focusable="false"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="68dp"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:id="@+id/media_playing_text"
                    style="@style/autoscroll"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <ImageButton
                    android:id="@+id/media_play_button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:contentDescription="@string/play"
                    android:gravity="right"
                    android:src="@drawable/ic_action_pause_over_video" />
            </LinearLayout>

            <ImageView
                android:id="@+id/media_podcast_img"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:padding="@dimen/space_l"
                android:contentDescription="@string/img_podcast_cover"
                android:scaleType="fitStart"
                android:visibility="gone" />

            <SurfaceView
                android:id="@+id/media_podcast_video"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/media_seek_bar_controller"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/space_l"
                android:visibility="gone">

                <TextView
                    android:id="@+id/media_time_elapsed"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.15"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:layout_marginRight="10dp"
                    android:textSize="12sp" />

                <SeekBar
                    android:id="@+id/media_seek"
                    android:layout_weight="0.7"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/media_time_duration"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.15"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:layout_marginLeft="10dp"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/media_controller"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:visibility="gone">

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/media_previous_btn"
                    android:src="@drawable/ic_action_previous"
                    android:background="@null"
                    android:contentDescription="@string/action_settings" />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/media_play_btn"
                    android:src="@drawable/ic_action_play_over_video"
                    android:background="@null"
                    android:contentDescription="@string/action_settings" />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/media_next_btn"
                    android:src="@drawable/ic_action_next"
                    android:background="@null"
                    android:contentDescription="@string/action_settings" />
            </LinearLayout>
        </LinearLayout>
    </com.sothree.slidinguppanel.SlidingUpPanelLayout>

</RelativeLayout>